--- a/lienhe.html
+++ b/lienhe.html
@@ -1,76 +1,361 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Liên Hệ</title>
-    <link href="https://fonts.googleapis.com/css2?family=Gentium+Book+Plus:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="./css/lienhe.css">
-</head>
-<body>
-    <div class="big-lienhe">
-    <div class="lienhe-1">
-    <div class="lienhe">
-        <h2>LIÊN HỆ</h2>
-        <div class="winemart">
-            <p>WineMart Trần Hưng Đạo, Q1</p>
-            <p>601 Trần Hưng Đạo, Phường Cầu Kho, Quận 1, TP. HCM</p>
-            <p><i class="fa-solid fa-clock"></i> 8:30 : 21:00</p>
-            <p><i class="fa-solid fa-phone"></i>1900636035</p>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Liên Hệ</title>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Gentium+Book+Plus:ital,wght@0,400;0,700;1,400&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+        />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="stylesheet" href="./css/lienhe.css" />
+        <link rel="shortcut icon" href="./img/logo.webp" type="image/x-icon" />
+    </head>
+    <body>
+        <div class="big-lienhe">
+            <div class="lienhe-1">
+                <div class="lienhe">
+                    <h2>LIÊN HỆ</h2>
+                    <div class="winemart">
+                        <p>WineMart Trần Hưng Đạo, Q1</p>
+                        <p>
+                            601 Trần Hưng Đạo, Phường Cầu Kho, Quận 1, TP. HCM
+                        </p>
+                        <p><i class="fa-solid fa-clock"></i> 8:30 : 21:00</p>
+                        <p><i class="fa-solid fa-phone"></i>1900636035</p>
+                    </div>
+                </div>
+                <form id="contact-form">
+                    <div class="form-group">
+                        <label for="name">Họ Tên:</label>
+                        <input type="text" id="name" name="name" required />
+                        <div class="error-message"></div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" required />
+                        <div class="error-message"></div>
+                    </div>
+                    <div class="form-group">
+                        <label for="phone">Số điện thoại:</label>
+                        <input
+                            type="tel"
+                            id="phone"
+                            name="phone"
+                            pattern="[0-9]{10}"
+                            required
+                        />
+                        <div class="error-message"></div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="message">Tin nhắn:</label>
+                        <textarea
+                            id="message"
+                            name="message"
+                            required
+                        ></textarea>
+                        <div class="error-message"></div>
+                    </div>
+
+                    <div class="form-group">
+                        <button type="submit">Gửi tin nhắn</button>
+                    </div>
+                </form>
+                <script>
+                    const form = document.getElementById("contact-form");
+                    const nameInput = document.getElementById("name");
+                    const emailInput = document.getElementById("email");
+                    const phoneInput = document.getElementById("phone");
+                    const messageInput = document.getElementById("message");
+                    const errorMessages =
+                        document.querySelectorAll(".error-message");
+
+                    form.addEventListener("submit", validateForm);
+
+                    function validateForm(e) {
+                        // Reset error messages
+                        e.preventDefault();
+                        errorMessages.forEach(
+                            (element) => (element.innerHTML = "")
+                        );
+
+                        // Validate
+                        let isValid = true;
+                        if (nameInput.value.trim() === "") {
+                            errorMessages[0].innerHTML =
+                                "Vui lòng nhập họ tên của bạn.";
+                            isValid = false;
+                        } else {
+                            isValid = true;
+                        }
+                        let isValidEmail =
+                            /^(([^<>()[\]\.,;:\s@\"]+(\.[^<>()[\]\.,;:\s@\"]+)*)|(\".+\"))@(([^<>()[\]\.,;:\s@\"]+\.)+[^<>()[\]\.,;:\s@\"]{2,})$/i;
+                        if (emailInput.value.trim() === "") {
+                            errorMessages[1].innerHTML =
+                                "Vui lòng nhập địa chỉ email của bạn.";
+                            isValid = false;
+                        } else if (
+                            !isValidEmail.test(emailInput.value.trim())
+                        ) {
+                            errorMessages[1].innerHTML =
+                                "Địa chỉ email không hợp lệ.";
+                            isValid = false;
+                        } else {
+                            isValid = true;
+                        }
+                        let isValidPhoneNumber =
+                            /(84|0[3|5|7|8|9])+([0-9]{8})\b/g;
+                        if (phoneInput.value.trim() === "") {
+                            errorMessages[2].innerHTML =
+                                "Vui lòng nhập số điện thoại của bạn.";
+                            isValid = false;
+                        } else if (
+                            !isValidPhoneNumber.test(phoneInput.value.trim())
+                        ) {
+                            errorMessages[2].innerHTML =
+                                "Số điện thoại không hợp lệ.";
+                            isValid = false;
+                        } else {
+                            isValid = true;
+                        }
+
+                        if (messageInput.value.trim() === "") {
+                            errorMessages[3].innerHTML =
+                                "Vui lòng nhập tin nhắn của bạn.";
+                            isValid = false;
+                        } else {
+                            isValid = true;
+                        }
+                        if (isValid) {
+                            alert("Tin nhắn của bạn đã được gửi thành công!");
+                            console.log(1);
+                            // form.reset();
+                        }
+                    }
+                </script>
+            </div>
+            <div class="date">
+                <h2><u>HÌNH ẢNH CỦA ĐỊA ĐIỂM NÀY</u></h2>
+                <div class="date-1">
+                    <div class="date-2">
+                        <img
+                            src="./img/đ1.jpg"
+                            alt=""
+                            width="200px"
+                            height="200px"
+                        />
+                    </div>
+                    <div class="date-2">
+                        <img
+                            src="./img/đ2.jpg"
+                            alt=""
+                            width="200px"
+                            height="200px"
+                        />
+                    </div>
+                    <div class="date-2">
+                        <img
+                            src="./img/đ3.jpg"
+                            alt=""
+                            width="200px"
+                            height="200px"
+                        />
+                    </div>
+                    <div class="date-2">
+                        <img
+                            src="./img/đ4.jpg"
+                            alt=""
+                            width="200px"
+                            height="200px"
+                        />
+                    </div>
+                </div>
+                <div class="date-1">
+                    <div class="date-2">
+                        <img
+                            src="./img/đ5.jpg"
+                            alt=""
+                            width="200px"
+                            height="200px"
+                        />
+                    </div>
+                    <div class="date-2">
+                        <img
+                            src="./img/đ6.jpg"
+                            alt=""
+                            width="200px"
+                            height="200px"
+                        />
+                    </div>
+                    <div class="date-2">
+                        <img
+                            src="./img/đ7.jpg"
+                            alt=""
+                            width="200px"
+                            height="200px"
+                        />
+                    </div>
+                    <div class="date-2">
+                        <img
+                            src="./img/đ8.jpg"
+                            alt=""
+                            width="200px"
+                            height="200px"
+                        />
+                    </div>
+                </div>
+                <div class="date-1">
+                    <div class="date-2">
+                        <img
+                            src="./img/đ9.jpg"
+                            alt=""
+                            width="200px"
+                            height="200px"
+                        />
+                    </div>
+                    <div class="date-2">
+                        <img
+                            src="./img/đ10.jpg"
+                            alt=""
+                            width="200px"
+                            height="200px"
+                        />
+                    </div>
+                    <div class="date-2">
+                        <img
+                            src="./img/đ11.jpg"
+                            alt=""
+                            width="200px"
+                            height="200px"
+                        />
+                    </div>
+                    <div class="date-2">
+                        <img
+                            src="./img/đ12.jpg"
+                            alt=""
+                            width="200px"
+                            height="200px"
+                        />
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>    
-    </div>
-    <div class="date">
-        <h2><u>HÌNH ẢNH CỦA ĐỊA ĐIỂM NÀY</u></h2>
-        <div class="date-1">
-            <div class="date-2">
-                <img src="./img/đ1.jpg" alt="" width="200px" height="200px">
-            </div>
-            <div class="date-2">
-                <img src="./img/đ2.jpg" alt="" width="200px" height="200px">
-            </div>
-            <div class="date-2">
-                <img src="./img/đ3.jpg" alt="" width="200px" height="200px">
-            </div>
-            <div class="date-2">
-                <img src="./img/đ4.jpg" alt="" width="200px" height="200px">
-            </div>
+        <!-- <div class="form">
+    <form method="post" action="#" name="register">
+        <p>
+          <label for="username">Tên đăng nhập(*)</label>
+          <input class="text" type="password" name="username" id="username" /></p>
+       <p>
+          <label for="password">Password(*)</label>
+          <input class="text" type="password" name="password" id="password" /></p>
+       <p>
+          <label for="confirm_pass">Nhập lại password(*)</label>
+          <input class="text" type="password" name="confirm_pass" id="confirm_pass" /></p>
+       <p>
+           <label for="lastname">Họ của bạn(*)</label>
+          <input class="text" type="text" name="lastname" id="lastname" /></p>
+       <p>
+           <label for="firstname">Tên của bạn(*)</label>
+          <input class="text" type="text" name="firstname" id="firstname" /></p>
+        <p>
+          <label for="email">Email(*)</label>
+          <input class="text" type="text" name="email" id="email" /></p>
+       <p>
+           <label for="phone">Số điện thoại(*)</label>
+           <input class="text" type="text" name="phone" id="phone" /></p>
+                    
+       <p>
+           <label id="bottom">submit</label>
+           <input type="submit" name="action" id="submit" value="Đăng ký" /></p>
+     </form>
+    <script>
+        var inputs = document.forms['register'].getElementsByTagName('input');
+  var run_onchange = false;
+  function valid(){
+   var errors = false;
+   var reg_mail = /^[A-Za-z0-9]+([_\.\-]?[A-Za-z0-9])*@[A-Za-z0-9]+([\.\-]?[A-Za-z0-9]+)*(\.[A-Za-z]+)+$/;
+   for(var i=0; i<inputs.length; i++){
+    var value = inputs[i].value;
+    var id = inputs[i].getAttribute('id');
+   
+    // Tạo phần tử span lưu thông tin lỗi
+    var span = document.createElement('span');
+    // Nếu span đã tồn tại thì remove
+    var p = inputs[i].parentNode;
+    if(p.lastChild.nodeName == 'SPAN') {p.removeChild(p.lastChild);}
+   
+    // Kiểm tra rỗng
+    if(value == ''){
+     span.innerHTML ='Thông tin rỗng';
+    }else{
+    // Kiểm tra các trường hợp khác
+     if(id == 'email'){
+      if(reg_mail.test(value) == false){ span.innerHTML ='Email không hợp lệ (ví dụ: abc@gmail.com)';}
+      var email =value;
+     }
+     if(id == 'confirm_email' && value != email){span.innerHTML ='Email nhập lại chưa đúng';}
+     // Kiểm tra password
+     if(id == 'password'){
+      if(value.length <6){span.innerHTML ='Password phải từ 6 ký tự';}
+      var pass =value;
+     }
+     // Kiểm tra password nhập lại
+     if(id == 'confirm_pass' && value != pass){span.innerHTML ='Password nhập lại chưa đúng';}
+     // Kiểm tra số điện thoại
+     if(id == 'phone' && isNaN(value) == true){span.innerHTML ='Số điện thoại phải là kiểu số';}
+    }
+   
+    // Nếu có lỗi thì chèn span vào hồ sơ, chạy onchange, submit return false, highlight border
+    if(span.innerHTML != ''){
+     inputs[i].parentNode.appendChild(span);
+     errors = true;
+     run_onchange = true;
+     inputs[i].style.border = '1px solid #c6807b';
+     inputs[i].style.background = '#fffcf9';
+    }
+    }// end for
+  
+   if(errors == false){alert('Đăng ký thành công');}
+   return !errors;
+  }// end valid()
+ 
+  // Chạy hàm kiểm tra valid()
+  var register = document.getElementById('submit');
+  register.onclick = function(){
+   return valid();
+  }
+ 
+  // Kiểm tra lỗi với sự kiện onchange -> gọi lại hàm valid()
+   for(var i=0; i<inputs.length; i++){
+    var id = inputs[i].getAttribute('id');
+    inputs[i].onchange = function(){
+     if(run_onchange == true){
+      this.style.border = '1px solid #999';
+      this.style.background = '#fff';
+      valid();
+     }
+    }
+   }// end for
+    </script>
+    </div> -->
+        <div class="gg-map">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.7146496369655!2d106.6832940147183!3d10.75646109233512!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f05267242b3%3A0x2a01d972a7b5d674!2zNjAxIMSQLiBUcuG6p24gSMawbmcgxJDhuqFvLCBD4bqndSBLaG8sIFF14bqtbiAxLCBUaMOgbmggcGjhu5EgSOG7kyBDaMOtIE1pbmgsIFZp4buHdCBOYW0!5e0!3m2!1svi!2s!4v1679774514671!5m2!1svi!2s"
+                width="100%"
+                height="400"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
         </div>
-        <div class="date-1">
-            <div class="date-2">
-                <img src="./img/đ5.jpg" alt="" width="200px" height="200px">
-            </div>
-            <div class="date-2">
-                <img src="./img/đ6.jpg" alt="" width="200px" height="200px">
-            </div>
-            <div class="date-2">
-                <img src="./img/đ7.jpg" alt="" width="200px" height="200px">
-            </div>
-            <div class="date-2">
-                <img src="./img/đ8.jpg" alt="" width="200px" height="200px">
-            </div>
-        </div>
-        <div class="date-1">
-            <div class="date-2">
-                <img src="./img/đ9.jpg" alt="" width="200px" height="200px">
-            </div>
-            <div class="date-2">
-                <img src="./img/đ10.jpg" alt="" width="200px" height="200px">
-            </div>
-            <div class="date-2">
-                <img src="./img/đ11.jpg" alt="" width="200px" height="200px">
-            </div>
-            <div class="date-2">
-                <img src="./img/đ12.jpg" alt=""  width="200px" height="200px">
-            </div>
-        </div>
-    </div>
-    </div>
-    <div class="gg-map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.7146496369655!2d106.6832940147183!3d10.75646109233512!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f05267242b3%3A0x2a01d972a7b5d674!2zNjAxIMSQLiBUcuG6p24gSMawbmcgxJDhuqFvLCBD4bqndSBLaG8sIFF14bqtbiAxLCBUaMOgbmggcGjhu5EgSOG7kyBDaMOtIE1pbmgsIFZp4buHdCBOYW0!5e0!3m2!1svi!2s!4v1679774514671!5m2!1svi!2s" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
-</body>
+    </body>
 </html>
