--- a/phukien.html
+++ b/phukien.html
@@ -6,56 +6,88 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phụ Kiện</title>
     <link rel="stylesheet" href="./css/phukien.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <link rel="shortcut icon" href="./img/logo.webp" type="image/x-icon" />
 </head>
 <body>
     <div class="SP-phukien">
         <hr>
-        <h2>TẤT CẢ SẢN PHẨM PHỤ KIỆN RƯỢU</h2>
+        <h2><i class='fas fa-glass-cheers'></i>TẤT CẢ SẢN PHẨM PHỤ KIỆN RƯỢU</h2>
         <hr>
         <div class="big-phukien">
             <div class="small-phukien">
-                <img src="./img/pk1.webp" alt="" width="250px" height="250px">
-                <p class="p">Hộp sơn mài Quý Mão 2023 (hộp đôi)</p>
-                <p>300.000 Đ</p>
+                <a href="">
+                    <img src="./img/pk1.webp" alt="" width="250px" height="250px" onmouseover="bigImg(this)" onmouseout="normalImg(this)">
+                    <p class="p">Hộp sơn mài Quý Mão 2023 (hộp đôi)</p>
+                    <p class="tien">300.000 Đ</p>
+                </a>
             </div>
             <div class="small-phukien">
-                <img src="./img/pk2.webp" alt="" width="250px" height="250px">
-                <p class="p">Hộp sơn mài Quý Mão 2023 (hộp đơn)</p>
-                <p>300.000 Đ</p>
+                <a href="">
+                    <img src="./img/pk2.webp" alt="" width="250px" height="250px" onmouseover="bigImg(this)" onmouseout="normalImg(this)">
+                    <p class="p">Hộp sơn mài Quý Mão 2023 (hộp đơn)</p>
+                    <p class="tien">300.000 Đ</p>
+                </a>
             </div>
             <div class="small-phukien">
-                <img src="./img/pk3.webp" alt="" width="250px" height="250px">
-                <p class="p">Bình Decanter Glass King</p>
-                <p>1.100.000 Đ</p>
+                <a href="">
+                    <img src="./img/pk3.webp" alt="" width="250px" height="250px" onmouseover="bigImg(this)" onmouseout="normalImg(this)">
+                    <p class="p">Bình Decanter Glass King</p>
+                    <p class="tien">1.100.000 Đ</p>
+                </a>
             </div>
             <div class="small-phukien">
-                <img src="./img/pk4.webp" alt="" width="250px" height="250px">
-                <p class="p">Hộp đựng vang 01 chai Premium - Winemart</p>
-                <p>90.000 Đ</p>
+                <a href="">
+                    <img src="./img/pk4.webp" alt="" width="250px" height="250px" onmouseover="bigImg(this)" onmouseout="normalImg(this)">
+                    <p class="p">Hộp đựng vang 01 chai Premium - Winemart</p>
+                    <p class="tien">90.000 Đ</p>
+                </a>
             </div>
         </div>
         <div class="big-phukien">
             <div class="small-phukien">
-                <img src="./img/pk5.webp" alt="" width="250px" height="250px">
-                <p class="p">Hộp da Cheers 2 chai + 2 ly</p>
-                <p>250.000 Đ</p>
+                <a href="">
+                    <img src="./img/pk5.webp" alt="" width="250px" height="250px" onmouseover="bigImg(this)" onmouseout="normalImg(this)">
+                    <p class="p">Hộp da Cheers 2 chai + 2 ly</p>
+                    <p class="tien">250.000 Đ</p>
+                </a>
             </div>
             <div class="small-phukien">
-                <img src="./img/pk6.webp" alt="" width="250px" height="250px">
-                <p class="p">Hộp kiếng 2 chai (bao gồm phụ kiện)</p>
-                <p class="p">Liên Hệ Ngay</p>
+                <a href="">
+                    <img src="./img/pk6.webp" alt="" width="250px" height="250px" onmouseover="bigImg(this)" onmouseout="normalImg(this)">
+                    <p class="p">Hộp kiếng 2 chai (bao gồm phụ kiện)</p>
+                    <p class="p">Liên Hệ Ngay</p>
+                </a>
             </div>
             <div class="small-phukien">
-                <img src="./img/pk7.webp" alt="" width="250px" height="250px">
-                <p class="p">Khay gỗ + Phụ kiện trang trí</p>
-                <p>100.000 Đ</p>
+                <a href="">
+                    <img src="./img/pk7.webp" alt="" width="250px" height="250px" onmouseover="bigImg(this)" onmouseout="normalImg(this)">
+                    <p class="p">Khay gỗ + Phụ kiện trang trí</p>
+                    <p class="tien">100.000 Đ</p>
+                </a>
             </div>
             <div class="small-phukien">
-                <img src="./img/pk8.webp" alt="" width="250px" height="250px">
-                <p class="p">Thùng thiếc xanh + Phụ kiện trang trí</p>
-                <p>180.000 Đ</p>
+                <a href="">
+                    <img src="./img/pk8.webp" alt="" width="250px" height="250px" onmouseover="bigImg(this)" onmouseout="normalImg(this)">
+                    <p class="p">Thùng thiếc xanh + Phụ kiện trang trí</p>
+                    <p class="tien">180.000 Đ</p>
+                </a>
             </div>
         </div>
     </div>
+    <script>
+        function bigImg(x) {
+    // x.style.height = "300px";
+    // x.style.width = "300px";
+    x.style = `transform: scale(0.9)`
+  }
+  
+  function normalImg(x) {
+    // x.style.height = "280px";
+    // x.style.width = "280px";
+    x.style = `transform: scale(1)`
+  
+  }
+    </script>
 </body>
 </html>
